--- a/src/index.css
+++ b/src/index.css
@@ -2,73 +2,132 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
 }
 
 body {
   background-color: #282828;
+  font-family: sans-serif;
 }
 
+/* Navbar.css */
 .navbar {
+  margin: 10px 10px 10px 10px;
+  /* background-color: #282828; */
+  background-color: #1a1a1a;
+  color: white;
   display: flex;
-  margin: 5px 10px 10px 10px;
+  justify-content: space-between;
   align-items: center;
-  background-color: #0f0f0f;
-  /* background-color: #CD201F; */
-  color: #FFFFFF;
-  padding: 10px;
+  padding: 1rem;
   border-radius: 10px;
+  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+  ;
 }
 
-
-.navbar__title {
-  margin-left: 20px;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.navbar__search {
-  flex-grow: 1;
-  /* margin: 0 20px; */
-}
-
-.navbar__search input {
-  background-color: grey;
-  margin-left: 50px;
-  padding: 5px;
-  width: 50%;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-}
-
-
-
-.navbar__actions {
+.navbar__logo {
   display: flex;
-  align-items: center;
+  font-size: 1.5rem;
+  margin-left: 10px;
 }
 
-.navbar__upload-button {
-  padding: 5px 10px;
-  margin-right: 10px;
-  border-radius: 5px;
-  border: 2px solid grey;
-  background-color: #181616;
-  /* YouTube red background color */
+.navbar__logo p {
+  margin-left: 5px;
+  margin-top: 10px;
+}
+
+.input-search {
+  display: flex;
+}
+
+.input {
+  width: 350px;
+  background-color: #282828;
   color: #FFFFFF;
-  /* White text color */
-  font-size: 16px;
-  cursor: pointer;
+  border: 1px solid grey;
+  border-radius: 20px;
+  padding: 10px;
 }
 
-.navbar__actions img {
-  height: 30px;
+.search-icon {
+  margin-top: 5px;
+  margin-left: 10px;
+  height: 20px;
+  width: 20px;
+  color: grey;
+}
+
+.search-icon:hover {
+  color: red;
+}
+
+.logo-icon {
+  margin-left: 5px;
+  margin-right: 5px;
+  color: red;
+  height: 40px;
+  width: 40px;
+}
+
+.plus-icon {
+  margin-top: 2px;
+  height: 20px;
+  width: 20px;
+}
+
+.plus-icon:hover {
+  color: red;
+}
+
+.profile-icon {
   border-radius: 50%;
+  height: 25px;
+  width: 25px;
+}
+
+.navbar__links {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  gap: 1rem;
+}
+
+.navbar__links li {
+  padding: 0.5rem;
+}
+
+.navbar__links li a {
+  color: white;
+
+}
+
+.navbar__links li a:hover {
+  text-decoration: underline;
 }
 
 /*  */
+/* MEDIA QUERIES FOR NAVBAR */
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: row;
+    align-items: center;
+  }
 
+  .navbar__logo {
+    margin-bottom: 10px;
+  }
+
+  .input-search {
+    margin-bottom: 10px;
+  }
+
+  .input {
+    width: 100%;
+  }
+}
+
+
+
+/* COMPONENTS CSS */
 .nature {
   margin: 15px 20px 10px 10px;
 }
